[package]
name = "autoshengji"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.133"
tungstenite = { version = "0.24.0", features = ["native-tls"] }
shengji = { path = "./vendor/shengji/backend"}
shengji-core = { path = "./vendor/shengji/core"}
shengji-mechanics = { path = "./vendor/shengji/mechanics" }
shengji-types = { path = "./vendor/shengji/backend/backend-types" }
zstd = "0.13.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.21", features = ["derive"] }
rand = "0.8.5"
